# code-quality-examples

./: .gitignore  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: BuildTest.yml  codeql-analysis.yml
ci/linux/: lint.sh  test_unit.sh  typecheck.sh
ci/win32/: create_venv.cmd  test_unit.cmd
doc/dev_documentation/: conf.py  index.rst
doc/user_documentation/: conf.py
src/code_quality_examples/: example_1_side_effects.py  example_3_mocks.py  example_4_linting_code_smells.py  example_5_typehints.py  example_6_documentation.py  main.py
unit_test/: test_example_1_side_effects.py  test_example_2_size_of_unit_test.py  test_example_3_mocks.py
